spec/testcasedatajava/SomethingExpectedTest.txt
./org/example/RecursiveMath.java:12: error: ';' expected
            return 1/power(base,-exponent)
                                          ^
1 error
make: *** [Makefile:5: test] Error 1
